# pocketcam

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  camera_preview.cpp  camera_preview.h  jni_camera.cpp  jni_gl.cpp  native_debug.h
app/src/main/cpp/camera/: camera_engine.cpp  camera_manager.cpp  display_dimension.h  image_reader.cpp  image_reader.h  ndk_camera.cpp  ndk_camera.h  ndk_camera_manager.cpp  ndk_camera_manager.h  ndk_jni.cpp
app/src/main/cpp/camera/common/: camera_utils.cpp  camera_utils.h  common_utils.h  media_utils.cpp  media_utils.h
app/src/main/cpp/gl/: camera_preview_mat.cpp  camera_preview_mat.h  material.h  renderer.cpp  renderer.h  utils.h
app/src/main/cpp/gl/primatives/: index_buffer.cpp  index_buffer.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.h
app/src/main/cpp/gl/shaders/: basic_fragment_shader.h  basic_shader.h  basic_vertex_shader.h
app/src/main/java/com/ashaleke/pocketcam/: Constants.kt  MainActivity.kt  NDKCamera.java  NDKCamera.kt  NDKCameraManager.kt
app/src/main/java/com/ashaleke/pocketcam/ui/: CameraFragment.kt  CameraRenderer.kt  CameraView.kt
app/src/main/java/com/ashaleke/pocketcam/ui/listeners/: CameraSurfaceAvailableListener.kt
app/src/main/res/layout/: activity_main.xml  camera_fragment.xml  fragment_camera.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
